# PHI-Redaction

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
evaluation/: generate_benchmark.py  run_benchmark.py
sample_data/: generate_medical_pdf.py
src/api/: __init__.py  config.py  logging_config.py  main.py  middleware.py  rate_limit.py
src/api/models/: __init__.py  schemas.py
src/api/routes/: __init__.py  health.py  redact.py
src/api/storage/: __init__.py  file_storage.py
src/redaction/: __init__.py  factory.py  pipeline.py  synthesizer.py
src/redaction/detectors/: __init__.py  base.py  llm_detector.py  prompt_builder.py
src/redaction/extractors/: __init__.py  base.py  pdf_extractor.py
src/redaction/models/: __init__.py  entities.py
src/redaction/redactors/: __init__.py  base.py  pdf_redactor.py
src/ui/: __init__.py  app.py
tests/: conftest.py  test_file_storage.py  test_health.py  test_unit_llm_detector.py
